--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.0.1",
   "description": "Custom logger for typescript projects",
   "main": "index.js",
+  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "clean": "rimraf ./dist",
+    "prepublishOnly": "npm run build",
+    "postpublish": "npm run clean"
   },
+  
   "author": "",
   "license": "ISC"
 }
