--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "custom-logger",
+  "name": "custom-logging-module",
   "version": "0.0.1",
   "description": "Custom logger for typescript projects",
-  "main": "index.js",
-  
+  "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
     "clean": "rimraf ./dist",
     "prepublishOnly": "npm run build",
     "postpublish": "npm run clean"
   },
-  
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "rimraf": "^5.0.5"
+  }
 }
